tests/tests/checks/snapshots/analysis/ts/ChromeUtils.js/defineESModuleGetter/main@SomeExportedClass.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/ts/ChromeUtils.js/defineESModuleGetter/SomeExportedClass
---
[
  {
    "loc": "00010:2-19",
    "source": 1,
    "syntax": "def,field",
    "pretty": "field obj::SomeExportedClass",
    "sym": "S_js_ts/src/ChromeUtils.js/obj.SomeExportedClass.",
    "type": "\"SomeExportedClass\""
  },
  {
    "loc": "00010:2-19",
    "structured": 1,
    "pretty": "obj::SomeExportedClass",
    "sym": "S_js_ts/src/ChromeUtils.js/obj.SomeExportedClass.",
    "js_sym": "#SomeExportedClass",
    "type_pretty": "\"SomeExportedClass\"",
    "kind": "field",
    "subsystem": null,
    "implKind": "impl",
    "sizeBytes": null,
    "alignmentBytes": null,
    "ownVFPtrBytes": null,
    "bindingSlots": [],
    "ontologySlots": [],
    "supers": [],
    "methods": [],
    "fields": [],
    "overrides": [],
    "props": [],
    "variants": []
  },
  {
    "loc": "00010:2-19",
    "target": 1,
    "kind": "def",
    "pretty": "obj::SomeExportedClass",
    "sym": "S_js_ts/src/ChromeUtils.js/obj.SomeExportedClass."
  },
  {
    "loc": "00020:8-25",
    "source": 1,
    "syntax": "use,field",
    "pretty": "field obj::SomeExportedClass",
    "sym": "S_js_ts/src/ChromeUtils.js/obj.SomeExportedClass.",
    "type": "\"SomeExportedClass\""
  },
  {
    "loc": "00020:8-25",
    "target": 1,
    "kind": "use",
    "pretty": "obj::SomeExportedClass",
    "sym": "S_js_ts/src/ChromeUtils.js/obj.SomeExportedClass."
  }
]
